<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.arogya.EditProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Signup"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etChangeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/changeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    tools:ignore="RtlSymmetry" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/changeDob"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_colored"
                android:text="@string/date_of_birth"
                android:textColor="@android:color/white"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/changeDobView"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-35dp"
                android:text="@string/not_selected"
                android:textColor="@color/colorPrimary" />

            <Spinner
                android:id="@+id/changeGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/changeGenderView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/editBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_colored"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
